# hnz

./: CMakeLists.txt
includes/hnz/: app.hpp  types.hpp
includes/hnz/ecs/: component.hpp  entity.hpp  group.hpp  pool.hpp  system.hpp
includes/hnz/safe/: safe_bool.hpp  safe_map.hpp  safe_queue.hpp  safe_set.hpp  safe_vector.hpp
sources/: app.cpp  main.cpp
sources/app/: assertions.cpp  invocation.cpp
sources/commands/: components.cpp  kill.cpp  parent.cpp
